# is-wireless-C

./: CMakeLists.txt  Makefile  README.md  main.c
api-private/: cli_handling.h  dfsPathFinding.h  matrixWorld.h  path.h  someLibFile.h  startingPointVector.h  utilities.h
body/: cli_handling.c  dfsPathFinding.c  matrixWorld.c  path.c  someLibFile.c  startingPointVector.c
tests/: CMakeLists.txt
tests/cliHandlingTests/: CMakeLists.txt  cliHandlingTests.c
tests/dfsPathFindingTests/: CMakeLists.txt  dfsPathFindingTests.c
tests/matrixWorldTests/: CMakeLists.txt  matrixWorldTests.c
tests/pathTests/: CMakeLists.txt  pathTests.c
tests/someTests/: CMakeLists.txt  someTests.c
tests/startingPointVectorTests/: CMakeLists.txt  startingPointVectorTests.c
tools/: generate_blocked_cells_coord.py
